# Acompanhamento-de-produ-o

./: .env  .gitignore  Dependecies.py  README.md  alembic.ini  db.db  db_backup.db  main.py  migrate_data.py  pyproject.toml  pytest.ini  recreate_all_data.py  requirements.txt  restore_backup.py  start.sh
Routes/: Auth_Router.py  Data_Router.py  Login_Router.py  Sector_Routes.py  Stock_Router.py  Supplier_Router.py
Schemes/: Auth_Schemes.py  Data_Schemes.py  Login_Scheme.py  Sector_Schemes.py  Stock_Schemes.py  Supplier_Schemes.py  Warehouse_Schemes.py
Schemes/Responses/: Response_Auth.py
Scripts/: create_raw_stock_and_machining_stock.py  delete_all_movimentations.py
Services/: Auth_Services.py  Data_Services.py  Sector_Service.py  Stock_Services.py
Settings/: Settings.py
alembic/: alembic.ini  env.py
alembic/versions/: f95f72e1be0e_criação_das_tabelas_iniciais2.py
app/: __init__.py  main.py
app/Routes/: Clients_Router.py  Components_Router.py  Data_Router.py  Employer_Router.py  Login_Router.py  Machine_Router.py  Machining_Production_Router.py  Movimentation_Router.py  Parts_Router.py  RelationMachinedXRaw_Router.py  RelationPartsxComponents.py  RelationPartsxComponents_Router.py  Relation_Router.py  Sector_Router.py  Sector_Routes.py  Setup_Router.py  Stock_Router.py  Supplier_Router.py  __init__.py
app/Schemas/: Clients_Schemas.py  Components_Schemas.py  Employers_Schemas.py  Login_Schema.py  Machine_Schemas.py  Machining_Production_Schemas.py  Movimentation_Schemas.py  Relation_Schemas.py  Sector_Schemas.py  Setup_Schema.py  Stock_Schemas.py  Supplier_Schemas.py  __init__.py
app/Schemes/: Clients_Schemes.py  Components_Schemes.py  Employers_Schemes.py  Login_Scheme.py  Machine_Schemes.py  Machining_Production_Schemes.py  Movimentation_Schemes.py  Parts_Schemes.py  RelationMachinedXRaw_Schemes.py  Relation_Schemes.py  Sector_Schemes.py  (+3 more)
models/: .env  Data.py  Empolyers.py  Models.py  Movimentation.py  Production.py  Sector.py  Stock.py
scripts/: add_hifens_desc.py  apply_sql.py  clean_part_descriptions.py  cleanup_descriptions.py  create_component_relations.py  db_debug.py  generate_variants.py  generate_variants.sql  generate_variants_logged.py  inspect_components.py  remove_part_suffixes_PART.py  remove_usinagem_caraca.py  restore_bruto_usinado.py  set_alembic_version.py  update_caraca_desc.py
tests/: Fake_Repositories.py  conftest.py
(+140 files in other folders)
