[project]
name = "acompanhamento-de-producao"
version = "0.1.0"
description = "API de acompanhamento de produção e controle de estoque"
authors = [
    { name = "João Pontes", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",

    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",

    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    "python-dotenv>=1.0.0",

    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart (>=0.0.21,<0.0.22)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
